--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
@@ -47,7 +48,7 @@
     "whatwg-fetch": "2.0.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node scripts/start.js --history-api-fallback",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
