docker-compose-prod.yml edited online with Bitbucket

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    image: trzl/bass-web_v1
+    image: trzl/portfolio:bass-web_v1
     container_name: bass-web_v1
     restart: unless-stopped
     expose:
